[FIX] website, *: auto-fold menu review
* portal

Review https://github.com/odoo/odoo/commit/392c91cda3133b921e9aca9a7b1c511231027438

- Some elements should not be folded in the "+" dropdown, like the login
  button and related stuff
- Using pull-right instead of navbar-right (https://github.com/odoo/odoo/blob/392c91cda3133b921e9aca9a7b1c511231027438/addons/portal/views/portal_templates.xml#L37)
  broke the mobile version of the menu
- Folded menu <li/> seemed too small (but it was only an illusion)
- On Chrome, the menu was sometimes not folded when it should have been.
  This was because of rounded width calculations.

For the first point, the code has been made so that everything that
follows a divider is considered unfoldable.

--- a/addons/portal/static/src/less/website.wrapwrap.less
+++ b/addons/portal/static/src/less/website.wrapwrap.less
@@ -200,6 +200,11 @@ hr {
             visibility: hidden;
         }
     }
+    .nav.navbar-nav.pull-right {
+        @media (max-width: @screen-xs-max) {
+            float: none!important;
+        }
+    }
 }
 ul.nav-stacked > li > a {
     padding: 2px 15px;
@@ -208,12 +213,7 @@ ul.nav-stacked > li > a {
 // TODO should be moved to website/ when the LESS split of portal/website will
 // be reviewed
 .navbar .o_extra_menu_items.open > ul {
-    padding: 0;
-
     > li {
-        &.divider {
-            display: none;
-        }
         + li {
             border-top: 1px solid @gray-lighter;
         }
